Added pages for creating and editing users

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
+${project.parent.artifactId}.error.username.taken=Already in use
+${project.parent.artifactId}.error.confirmPassword.match=Must match
