--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
 ${project.parent.artifactId}.error.username.taken=Already in use
 ${project.parent.artifactId}.error.confirmPassword.match=Must match
+${project.parent.artifactId}.error.providerIdentifier.taken=Already in use
