Updated several icons to make them more appropriate for a Kenyan context
Added accreditation to README to reflect this

--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-Initial ITECH work on an OpenMRS-based EMR for the Kenya MoH 
+KenyaEMR OpenMRS Module
+=======================
+
+Overview
+--------
+
+Initial ITECH work on an OpenMRS-based EMR for the Kenya MoH
+
+Requirements
+------------
+* OpenmRS 1.9.1
+* UI Framework module 2.0
+* UI Library module 2.0
+
+Accreditation
+-------------
+* Highcharts graphing library by Highsoft used under Creative Commons Licence 3.0 (http://www.highcharts.com/)
+* Pretty Office Icons used with permission from CustomIconDesign (http://www.customicondesign.com)
