Fixed rows in the obs table not being properly combined by date. Also moved fetchConcepts which is common to obsTable and obsGraph into KenyaEmrUtils

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,3 +2,14 @@ ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
 ${project.parent.artifactId}.error.username.taken=Already in use
 ${project.parent.artifactId}.error.confirmPassword.match=Must match
 ${project.parent.artifactId}.error.providerIdentifier.taken=Already in use
+
+${project.parent.artifactId}.EditPersonDetailsForm.personName.givenName=Given name
+${project.parent.artifactId}.EditPersonDetailsForm.personName.familyName=Family name
+${project.parent.artifactId}.EditPersonDetailsForm.gender=Gender
+
+${project.parent.artifactId}.EditLoginDetailsForm.username=Username
+${project.parent.artifactId}.EditLoginDetailsForm.password=Password
+${project.parent.artifactId}.EditLoginDetailsForm.confirmPassword=Confirm password
+${project.parent.artifactId}.EditLoginDetailsForm.roles=Roles
+
+${project.parent.artifactId}.EditProviderDetailsForm.identifier=Identifier
