Fixed missing messages on patient check-in dialog

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -3,6 +3,9 @@ ${project.parent.artifactId}.error.username.taken=Already in use
 ${project.parent.artifactId}.error.confirmPassword.match=Must match
 ${project.parent.artifactId}.error.providerIdentifier.taken=Already in use
 
+${project.parent.artifactId}.Visit.visitType=Visit type
+${project.parent.artifactId}.Visit.startDatetime=Start date and time
+
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.givenName=Given name
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.familyName=Family name
 ${project.parent.artifactId}.EditPersonDetailsForm.gender=Gender
