Implemented 'forgot password' functionality * Added secret question and answer to edit login details form * Added 'My Profile' page where users can change their password and secret question/answer * Added 'Forgot password' link to login page * Added 'Forgot password' form which asks secret question, checks answer and redirects to password change page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,10 +1,17 @@
 ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
-${project.parent.artifactId}.error.username.taken=Already in use
-${project.parent.artifactId}.error.confirmPassword.match=Must match
-${project.parent.artifactId}.error.providerIdentifier.taken=Already in use
 
 ${project.parent.artifactId}.Visit.visitType=Visit type
 ${project.parent.artifactId}.Visit.startDatetime=Start date and time
+
+# Error messages
+
+${project.parent.artifactId}.error.required=Required
+${project.parent.artifactId}.error.username.taken=Already in use
+${project.parent.artifactId}.error.confirmPassword.match=Must match
+${project.parent.artifactId}.error.providerIdentifier.taken=Already in use
+${project.parent.artifactId}.error.secretAnswerNotChangedWithQuestion=Re-enter answer if changing question
+
+# Account edit dialogs
 
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.givenName=Given name
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.familyName=Family name
@@ -13,6 +20,18 @@ ${project.parent.artifactId}.EditPersonDetailsForm.gender=Gender
 ${project.parent.artifactId}.EditLoginDetailsForm.username=Username
 ${project.parent.artifactId}.EditLoginDetailsForm.password=Password
 ${project.parent.artifactId}.EditLoginDetailsForm.confirmPassword=Confirm password
+${project.parent.artifactId}.EditLoginDetailsForm.secretQuestion=Secret question
+${project.parent.artifactId}.EditLoginDetailsForm.secretAnswer=Secret answer
 ${project.parent.artifactId}.EditLoginDetailsForm.roles=Roles
 
 ${project.parent.artifactId}.EditProviderDetailsForm.identifier=Identifier
+
+# Profile change dialogs
+
+${project.parent.artifactId}.ChangePasswordForm.oldPassword=Old password
+${project.parent.artifactId}.ChangePasswordForm.newPassword=New password
+${project.parent.artifactId}.ChangePasswordForm.confirmNewPassword=Confirm new password
+
+${project.parent.artifactId}.ChangeSecretQuestionForm.currentPassword=Current password
+${project.parent.artifactId}.ChangeSecretQuestionForm.secretQuestion=Secret question
+${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret answer
