Applied review fixes and stop date message properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
 
 ${project.parent.artifactId}.Visit.visitType=Visit type
 ${project.parent.artifactId}.Visit.startDatetime=Start date and time
+${project.parent.artifactId}.Visit.stopDatetime=Stop date and time
 
 # Error messages
 
