Further refactor of regimen code to support TB regimens

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 ${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
 
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
+${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
 
 # Visits
 
