--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
-${project.parent.artifactId}.title=Kenya OpenMRS EMR Module
+${project.parent.artifactId}.title=Kenya EMR
+
+${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Medical Services<br/>Ministry of Public Health and Sanitation
 
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
 ${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
