Fixed login dialog for the enter form page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ ${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Medica
 
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
 ${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
+${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
 
 # Visits
 
