--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ ${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Medica
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
 ${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
 ${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
+${project.parent.artifactId}.confirmVoidVisit=Are you sure you want to void this visit? This should only be performed by data manager in cases of data entry error.
 
 # Visits
 
