Added system requirements box to the first time setup page to make it easier for admins to check requirements

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,10 +2,13 @@ ${project.parent.artifactId}.title=Kenya EMR
 
 ${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Medical Services<br/>Ministry of Public Health and Sanitation
 
-${project.parent.artifactId}.neverOnARVs=Never on ARVs
-${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
 ${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
 ${project.parent.artifactId}.confirmVoidVisit=Are you sure you want to void this visit? This should only be performed by data manager in cases of data entry error.
+${project.parent.artifactId}.neverOnARVs=Never on ARVs
+${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
+
+${project.parent.artifactId}.admin.firstTimeSetup=First Time Setup
+${project.parent.artifactId}.admin.systemRequirements=System Requirements
 
 # Visits
 
