Tidied up branding of KenyaEMR * Moved logos into this module from KenyaUI * Updated ministry name on page header * Cleaned up all references to "Kenya EMR" to be "KenyaEMR"

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
-${project.parent.artifactId}.title=Kenya EMR
+${project.parent.artifactId}.title=KenyaEMR
 
-${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Medical Services<br/>Ministry of Public Health and Sanitation
+${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Health
 
 ${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
 ${project.parent.artifactId}.confirmVoidVisit=Are you sure you want to void this visit? This should only be performed by data manager in cases of data entry error.
