Added override for name of PMTCT concept via UIFR localization. Will require UIFR-123 before this is displayed though.

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -52,3 +52,8 @@ ${project.parent.artifactId}.ChangePasswordForm.confirmNewPassword=Confirm new p
 ${project.parent.artifactId}.ChangeSecretQuestionForm.currentPassword=Current password
 ${project.parent.artifactId}.ChangeSecretQuestionForm.secretQuestion=Secret question
 ${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret answer
+
+# Metadata (will require UIFR-123)
+
+openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
+ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
