Removed name attribute of lab tests since this will be covered by concept localization available in UIFR 3.0

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -57,3 +57,4 @@ ${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret
 
 openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
 ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
+ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum Glutamic-Pyruvic Transaminase (ALT)
