Added basic relationship editing support - may need extra validation etc

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ ${project.parent.artifactId}.title=KenyaEMR
 ${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Health
 
 ${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
+${project.parent.artifactId}.confirmVoidRelationship=Are you sure you want to void this relationship? This should only be performed by data manager in cases of data entry error.
 ${project.parent.artifactId}.confirmVoidVisit=Are you sure you want to void this visit? This should only be performed by data manager in cases of data entry error.
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
 ${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
