Updated account edit page after latest kenyaui changes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,6 +5,9 @@ ${project.parent.artifactId}.subtitle=Government of Kenya<br/>Ministry of Health
 ${project.parent.artifactId}.authenticateForFormSubmission=Your session has expired. Please login again to continue submitting this form.
 ${project.parent.artifactId}.confirmVoidRelationship=Are you sure you want to void this relationship? This should only be performed by data manager in cases of data entry error.
 ${project.parent.artifactId}.confirmVoidVisit=Are you sure you want to void this visit? This should only be performed by data manager in cases of data entry error.
+${project.parent.artifactId}.confirmReenableUser=Are you sure you want to re-enable this login?
+${project.parent.artifactId}.confirmDisableUser=Are you sure you want to disable this login?
+${project.parent.artifactId}.loginIsDisabled=Login is disabled
 ${project.parent.artifactId}.neverOnARVs=Never on ARVs
 ${project.parent.artifactId}.neverOnTbRegimen=Never on TB regimen
 
