--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -62,3 +62,6 @@ ${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret
 openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
 ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
 ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum Glutamic-Pyruvic Transaminase (ALT)
+ui.i18n.Concept.name.664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Negative
+ui.i18n.Concept.name.703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Positive
+ui.i18n.Concept.name.1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Not Tested
