Updated concept names on patient registration form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -57,11 +57,22 @@ ${project.parent.artifactId}.ChangeSecretQuestionForm.currentPassword=Current pa
 ${project.parent.artifactId}.ChangeSecretQuestionForm.secretQuestion=Secret question
 ${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret answer
 
-# Metadata (will require UIFR-123)
+# Concepts
 
 openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
-ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
-ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum Glutamic-Pyruvic Transaminase (ALT)
+
+ui.i18n.Concept.name.1060AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Cohabiting
+ui.i18n.Concept.name.159785AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=College, university or polytechnic
+ui.i18n.Concept.name.1058AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Divorced
+ui.i18n.Concept.name.5555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Married monogamous
+ui.i18n.Concept.name.159715AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Married polygamous
 ui.i18n.Concept.name.664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Negative
+ui.i18n.Concept.name.1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Not tested
+ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
 ui.i18n.Concept.name.703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Positive
-ui.i18n.Concept.name.1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Not Tested
+ui.i18n.Concept.name.1713AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Primary school education
+ui.i18n.Concept.name.1714AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Secondary school education
+ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum glutamic-pyruvic transaminase (ALT)
+ui.i18n.Concept.name.1057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Single
+ui.i18n.Concept.name.1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Unknown
+ui.i18n.Concept.name.1059AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Widowed
