--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -76,3 +76,4 @@ ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum glutamic-pyruvic
 ui.i18n.Concept.name.1057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Single
 ui.i18n.Concept.name.1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Unknown
 ui.i18n.Concept.name.1059AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Widowed
+ui.i18n.Concept.name.5617AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Partner or Spouse
