--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -37,7 +37,8 @@ ${project.parent.artifactId}.error.secretAnswerNotChangedWithQuestion=Re-enter a
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.givenName=Given name
 ${project.parent.artifactId}.EditPersonDetailsForm.personName.familyName=Family name
 ${project.parent.artifactId}.EditPersonDetailsForm.gender=Gender
-${project.parent.artifactId}.EditPersonDetailsForm.telephone=Telephone
+${project.parent.artifactId}.EditPersonDetailsForm.telephoneContact=Telephone
+${project.parent.artifactId}.EditPersonDetailsForm.emailAddress=Email address
 
 ${project.parent.artifactId}.EditLoginDetailsForm.username=Username
 ${project.parent.artifactId}.EditLoginDetailsForm.password=Password
