Fixed broken messages on user details form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -40,12 +40,12 @@ ${project.parent.artifactId}.EditPersonDetailsForm.gender=Gender
 ${project.parent.artifactId}.EditPersonDetailsForm.telephoneContact=Telephone
 ${project.parent.artifactId}.EditPersonDetailsForm.emailAddress=Email address
 
-${project.parent.artifactId}.EditLoginDetailsForm.username=Username
-${project.parent.artifactId}.EditLoginDetailsForm.password=Password
-${project.parent.artifactId}.EditLoginDetailsForm.confirmPassword=Confirm password
-${project.parent.artifactId}.EditLoginDetailsForm.secretQuestion=Secret question
-${project.parent.artifactId}.EditLoginDetailsForm.secretAnswer=Secret answer
-${project.parent.artifactId}.EditLoginDetailsForm.roles=Roles
+${project.parent.artifactId}.EditUserDetailsForm.username=Username
+${project.parent.artifactId}.EditUserDetailsForm.password=Password
+${project.parent.artifactId}.EditUserDetailsForm.confirmPassword=Confirm password
+${project.parent.artifactId}.EditUserDetailsForm.secretQuestion=Secret question
+${project.parent.artifactId}.EditUserDetailsForm.secretAnswer=Secret answer
+${project.parent.artifactId}.EditUserDetailsForm.roles=Roles
 
 ${project.parent.artifactId}.EditProviderDetailsForm.identifier=Identifier
 
