Replaced concept UUIDs in messages.properties with available metadata keys

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -63,22 +63,22 @@ ${project.parent.artifactId}.ChangeSecretQuestionForm.newSecretAnswer=New secret
 
 openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
 
-ui.i18n.Concept.name.1060AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Cohabiting
-ui.i18n.Concept.name.159785AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=College, university or polytechnic
-ui.i18n.Concept.name.1058AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Divorced
+ui.i18n.Concept.name.${metadata.concept.COLLEGE_UNIVERSITY_POLYTECHNIC}=College, university or polytechnic
+ui.i18n.Concept.name.${metadata.concept.DIVORCED}=Divorced
+ui.i18n.Concept.name.${metadata.concept.LIVING_WITH_PARTNER}=Cohabiting
+ui.i18n.Concept.name.${metadata.concept.MARRIED_MONOGAMOUS}=Married monogamous
+ui.i18n.Concept.name.${metadata.concept.MARRIED_POLYGAMOUS}=Married polygamous
+ui.i18n.Concept.name.${metadata.concept.NEGATIVE}=Negative
+ui.i18n.Concept.name.${metadata.concept.NEVER_MARRIED}=Single
+ui.i18n.Concept.name.${metadata.concept.NOT_HIV_TESTED}=Not tested
+ui.i18n.Concept.name.${metadata.concept.OTHER_NON_CODED}=Other
+ui.i18n.Concept.name.${metadata.concept.PMTCT_PROGRAM}=PMTCT
+ui.i18n.Concept.name.${metadata.concept.POSITIVE}=Positive
+ui.i18n.Concept.name.${metadata.concept.UNKNOWN}=Unknown
+ui.i18n.Concept.name.${metadata.concept.WIDOWED}=Widowed
 ui.i18n.Concept.name.1540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Employee
 ui.i18n.Concept.name.1538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Farmer
-ui.i18n.Concept.name.5555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Married monogamous
-ui.i18n.Concept.name.159715AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Married polygamous
-ui.i18n.Concept.name.664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Negative
-ui.i18n.Concept.name.1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Not tested
-ui.i18n.Concept.name.5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Other
-ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
-ui.i18n.Concept.name.703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Positive
 ui.i18n.Concept.name.1713AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Primary school education
 ui.i18n.Concept.name.1714AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Secondary school education
 ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum glutamic-pyruvic transaminase (ALT)
-ui.i18n.Concept.name.1057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Single
 ui.i18n.Concept.name.1539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Trader
-ui.i18n.Concept.name.1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Unknown
-ui.i18n.Concept.name.1059AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Widowed
