Moved more UUIDs for forms and concepts into metadata reference files

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -65,20 +65,21 @@ openmrs.property.MESSAGE_PROPERTY_ALLOW_KEYS_OUTSIDE_OF_MODULE_NAMESPACE=true
 
 ui.i18n.Concept.name.${metadata.concept.COLLEGE_UNIVERSITY_POLYTECHNIC}=College, university or polytechnic
 ui.i18n.Concept.name.${metadata.concept.DIVORCED}=Divorced
+ui.i18n.Concept.name.${metadata.concept.EMPLOYEE}=Employee
+ui.i18n.Concept.name.${metadata.concept.FARMER}=Farmer
 ui.i18n.Concept.name.${metadata.concept.LIVING_WITH_PARTNER}=Cohabiting
 ui.i18n.Concept.name.${metadata.concept.MARRIED_MONOGAMOUS}=Married monogamous
 ui.i18n.Concept.name.${metadata.concept.MARRIED_POLYGAMOUS}=Married polygamous
 ui.i18n.Concept.name.${metadata.concept.NEGATIVE}=Negative
+ui.i18n.Concept.name.${metadata.concept.PRIMARY_EDUCATION}=Primary school education
 ui.i18n.Concept.name.${metadata.concept.NEVER_MARRIED}=Single
 ui.i18n.Concept.name.${metadata.concept.NOT_HIV_TESTED}=Not tested
 ui.i18n.Concept.name.${metadata.concept.OTHER_NON_CODED}=Other
 ui.i18n.Concept.name.${metadata.concept.PMTCT_PROGRAM}=PMTCT
 ui.i18n.Concept.name.${metadata.concept.POSITIVE}=Positive
+ui.i18n.Concept.name.${metadata.concept.SECONDARY_EDUCATION}=Secondary school education
+ui.i18n.Concept.name.${metadata.concept.TRADER}=Trader
 ui.i18n.Concept.name.${metadata.concept.UNKNOWN}=Unknown
 ui.i18n.Concept.name.${metadata.concept.WIDOWED}=Widowed
-ui.i18n.Concept.name.1540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Employee
-ui.i18n.Concept.name.1538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Farmer
-ui.i18n.Concept.name.1713AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Primary school education
-ui.i18n.Concept.name.1714AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Secondary school education
+
 ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum glutamic-pyruvic transaminase (ALT)
-ui.i18n.Concept.name.1539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Trader
