added concept mapping for pmtct to a shorter name

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -83,3 +83,4 @@ ui.i18n.Concept.name.${metadata.concept.UNKNOWN}=Unknown
 ui.i18n.Concept.name.${metadata.concept.WIDOWED}=Widowed
 
 ui.i18n.Concept.name.654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=Serum glutamic-pyruvic transaminase (ALT)
+ui.i18n.Concept.name.160538AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=PMTCT
