Population type to show only KP type. Formatted phone numbers, Disability column only to show disability type, Added Linked column to HTS register, mapped marital status for never married and single correctly, added encounter date

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -72,7 +72,8 @@ ui.i18n.Concept.name.${metadata.concept.MARRIED_MONOGAMOUS}=Married monogamous
 ui.i18n.Concept.name.${metadata.concept.MARRIED_POLYGAMOUS}=Married polygamous
 ui.i18n.Concept.name.${metadata.concept.NEGATIVE}=Negative
 ui.i18n.Concept.name.${metadata.concept.PRIMARY_EDUCATION}=Primary school education
-ui.i18n.Concept.name.${metadata.concept.NEVER_MARRIED}=Single
+ui.i18n.Concept.name.${metadata.concept.NEVER_MARRIED}=Never married
+ui.i18n.Concept.name.${metadata.concept.LIVING_ALONE}=Single
 ui.i18n.Concept.name.${metadata.concept.NOT_HIV_TESTED}=Not tested
 ui.i18n.Concept.name.${metadata.concept.OTHER_NON_CODED}=Other
 ui.i18n.Concept.name.${metadata.concept.PMTCT_PROGRAM}=PMTCT
